[package]
name = "gaudio_ctl"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Hofman <pavhofman@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gaudio_ctl"
path = "src/bin.rs"


[dependencies]
alsa = "0.6.0"
nix = "0.23"
log = "0.4.14"
env_logger = "0.9.0"
cancellable-timer = "0.1.0"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
crossbeam-channel = "0.5.1"